Source/Alternet.UI.Pal/Api/PropertyGridChoices.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>

#pragma once

#include "PropertyGridChoices.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API PropertyGridChoices* PropertyGridChoices_Create_()
{
    return MarshalExceptions<PropertyGridChoices*>([&](){
        return new PropertyGridChoices();
    });
}

ALTERNET_UI_API void* PropertyGridChoices_CreatePropertyGridChoices_()
{
    return MarshalExceptions<void*>([&](){
        return PropertyGridChoices::CreatePropertyGridChoices();
    });
}

ALTERNET_UI_API void PropertyGridChoices_Delete_(void* handle)
{
    MarshalExceptions<void>([&](){
        PropertyGridChoices::Delete(handle);
    });
}

ALTERNET_UI_API void PropertyGridChoices_Add_(void* handle, NativeStringSpan* text, int value)
{
    MarshalExceptions<void>([&](){
        PropertyGridChoices::Add(handle, *text, value);
    });
}

ALTERNET_UI_API void PropertyGridChoices_SetLabel_(void* handle, uint32_t ind, NativeStringSpan* value)
{
    MarshalExceptions<void>([&](){
        PropertyGridChoices::SetLabel(handle, ind, *value);
    });
}

ALTERNET_UI_API void PropertyGridChoices_SetFgCol_(void* handle, uint32_t ind, Color* color)
{
    MarshalExceptions<void>([&](){
        PropertyGridChoices::SetFgCol(handle, ind, *color);
    });
}

ALTERNET_UI_API void PropertyGridChoices_SetBgCol_(void* handle, uint32_t ind, Color* color)
{
    MarshalExceptions<void>([&](){
        PropertyGridChoices::SetBgCol(handle, ind, *color);
    });
}

ALTERNET_UI_API Color_C PropertyGridChoices_GetFgCol_(void* handle, uint32_t ind)
{
    return MarshalExceptions<Color_C>([&](){
        return PropertyGridChoices::GetFgCol(handle, ind);
    });
}

ALTERNET_UI_API Color_C PropertyGridChoices_GetBgCol_(void* handle, uint32_t ind)
{
    return MarshalExceptions<Color_C>([&](){
        return PropertyGridChoices::GetBgCol(handle, ind);
    });
}

ALTERNET_UI_API void* PropertyGridChoices_GetBitmap_(void* handle, uint32_t ind)
{
    return MarshalExceptions<void*>([&](){
        return PropertyGridChoices::GetBitmap(handle, ind);
    });
}

ALTERNET_UI_API void PropertyGridChoices_SetBitmapFromItem_(void* handle, uint32_t ind, void* handle2, uint32_t ind2)
{
    MarshalExceptions<void>([&](){
        PropertyGridChoices::SetBitmapFromItem(handle, ind, handle2, ind2);
    });
}

ALTERNET_UI_API NativeStringSpan_C PropertyGridChoices_GetLabel_(void* handle, uint32_t ind)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return PropertyGridChoices::GetLabel(handle, ind);
    });
}

ALTERNET_UI_API uint32_t PropertyGridChoices_GetCount_(void* handle)
{
    return MarshalExceptions<uint32_t>([&](){
        return PropertyGridChoices::GetCount(handle);
    });
}

ALTERNET_UI_API int PropertyGridChoices_GetValue_(void* handle, uint32_t ind)
{
    return MarshalExceptions<int>([&](){
        return PropertyGridChoices::GetValue(handle, ind);
    });
}

ALTERNET_UI_API int PropertyGridChoices_GetLabelIndex_(void* handle, NativeStringSpan* str)
{
    return MarshalExceptions<int>([&](){
        return PropertyGridChoices::GetLabelIndex(handle, *str);
    });
}

ALTERNET_UI_API int PropertyGridChoices_GetValueIndex_(void* handle, int val)
{
    return MarshalExceptions<int>([&](){
        return PropertyGridChoices::GetValueIndex(handle, val);
    });
}

ALTERNET_UI_API void PropertyGridChoices_Insert_(void* handle, int index, NativeStringSpan* text, int value)
{
    MarshalExceptions<void>([&](){
        PropertyGridChoices::Insert(handle, index, *text, value);
    });
}

ALTERNET_UI_API c_bool PropertyGridChoices_IsOk_(void* handle)
{
    return MarshalExceptions<c_bool>([&](){
        return PropertyGridChoices::IsOk(handle);
    });
}

ALTERNET_UI_API void PropertyGridChoices_RemoveAt_(void* handle, uint64_t nIndex, uint64_t count)
{
    MarshalExceptions<void>([&](){
        PropertyGridChoices::RemoveAt(handle, nIndex, count);
    });
}

ALTERNET_UI_API void PropertyGridChoices_Clear_(void* handle)
{
    MarshalExceptions<void>([&](){
        PropertyGridChoices::Clear(handle);
    });
}