Source/Alternet.UI/Native/PropertyGridChoices.Generated.cs

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>
#nullable enable
#pragma warning disable

using System;
using System.Runtime.InteropServices;
using System.ComponentModel;
using System.Security;
namespace Alternet.UI.Native
{
    internal partial class PropertyGridChoices : NativeObject
    {
        static PropertyGridChoices()
        {
        }
        
        public PropertyGridChoices()
        {
            SetNativePointer(NativeApi.PropertyGridChoices_Create_());
        }
        
        public PropertyGridChoices(IntPtr nativePointer) : base(nativePointer)
        {
        }
        
        public static System.IntPtr CreatePropertyGridChoices()
        {
            return NativeApi.PropertyGridChoices_CreatePropertyGridChoices_();
        }
        
        public static void Delete(System.IntPtr handle)
        {
            NativeApi.PropertyGridChoices_Delete_(handle);
        }
        
        public static void Add(System.IntPtr handle, Alternet.UI.NativeStringSpan text, int value)
        {
            var text_Native = text.ToNative();
NativeApi.PropertyGridChoices_Add_(handle, ref text_Native, value);
        }
        
        public static void SetLabel(System.IntPtr handle, uint ind, Alternet.UI.NativeStringSpan value)
        {
            var value_Native = value.ToNative();
NativeApi.PropertyGridChoices_SetLabel_(handle, ind, ref value_Native);
        }
        
        public static void SetFgCol(System.IntPtr handle, uint ind, Alternet.Drawing.Color color)
        {
            var color_Native = color.ToNative();
NativeApi.PropertyGridChoices_SetFgCol_(handle, ind, ref color_Native);
        }
        
        public static void SetBgCol(System.IntPtr handle, uint ind, Alternet.Drawing.Color color)
        {
            var color_Native = color.ToNative();
NativeApi.PropertyGridChoices_SetBgCol_(handle, ind, ref color_Native);
        }
        
        public static Alternet.Drawing.Color GetFgCol(System.IntPtr handle, uint ind)
        {
            return NativeApi.PropertyGridChoices_GetFgCol_(handle, ind);
        }
        
        public static Alternet.Drawing.Color GetBgCol(System.IntPtr handle, uint ind)
        {
            return NativeApi.PropertyGridChoices_GetBgCol_(handle, ind);
        }
        
        public static System.IntPtr GetBitmap(System.IntPtr handle, uint ind)
        {
            return NativeApi.PropertyGridChoices_GetBitmap_(handle, ind);
        }
        
        public static void SetBitmapFromItem(System.IntPtr handle, uint ind, System.IntPtr handle2, uint ind2)
        {
            NativeApi.PropertyGridChoices_SetBitmapFromItem_(handle, ind, handle2, ind2);
        }
        
        public static Alternet.UI.NativeStringSpan GetLabel(System.IntPtr handle, uint ind)
        {
            return NativeApi.PropertyGridChoices_GetLabel_(handle, ind);
        }
        
        public static uint GetCount(System.IntPtr handle)
        {
            return NativeApi.PropertyGridChoices_GetCount_(handle);
        }
        
        public static int GetValue(System.IntPtr handle, uint ind)
        {
            return NativeApi.PropertyGridChoices_GetValue_(handle, ind);
        }
        
        public static int GetLabelIndex(System.IntPtr handle, Alternet.UI.NativeStringSpan str)
        {
            var str_Native = str.ToNative();
return NativeApi.PropertyGridChoices_GetLabelIndex_(handle, ref str_Native);
        }
        
        public static int GetValueIndex(System.IntPtr handle, int val)
        {
            return NativeApi.PropertyGridChoices_GetValueIndex_(handle, val);
        }
        
        public static void Insert(System.IntPtr handle, int index, Alternet.UI.NativeStringSpan text, int value)
        {
            var text_Native = text.ToNative();
NativeApi.PropertyGridChoices_Insert_(handle, index, ref text_Native, value);
        }
        
        public static bool IsOk(System.IntPtr handle)
        {
            return NativeApi.PropertyGridChoices_IsOk_(handle);
        }
        
        public static void RemoveAt(System.IntPtr handle, ulong nIndex, ulong count)
        {
            NativeApi.PropertyGridChoices_RemoveAt_(handle, nIndex, count);
        }
        
        public static void Clear(System.IntPtr handle)
        {
            NativeApi.PropertyGridChoices_Clear_(handle);
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr PropertyGridChoices_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr PropertyGridChoices_CreatePropertyGridChoices_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void PropertyGridChoices_Delete_(System.IntPtr handle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void PropertyGridChoices_Add_(System.IntPtr handle, ref Alternet.UI.NativeStringSpan text, int value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void PropertyGridChoices_SetLabel_(System.IntPtr handle, uint ind, ref Alternet.UI.NativeStringSpan value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void PropertyGridChoices_SetFgCol_(System.IntPtr handle, uint ind, ref NativeApiTypes.Color color);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void PropertyGridChoices_SetBgCol_(System.IntPtr handle, uint ind, ref NativeApiTypes.Color color);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.Color PropertyGridChoices_GetFgCol_(System.IntPtr handle, uint ind);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.Color PropertyGridChoices_GetBgCol_(System.IntPtr handle, uint ind);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr PropertyGridChoices_GetBitmap_(System.IntPtr handle, uint ind);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void PropertyGridChoices_SetBitmapFromItem_(System.IntPtr handle, uint ind, System.IntPtr handle2, uint ind2);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan PropertyGridChoices_GetLabel_(System.IntPtr handle, uint ind);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern uint PropertyGridChoices_GetCount_(System.IntPtr handle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int PropertyGridChoices_GetValue_(System.IntPtr handle, uint ind);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int PropertyGridChoices_GetLabelIndex_(System.IntPtr handle, ref Alternet.UI.NativeStringSpan str);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int PropertyGridChoices_GetValueIndex_(System.IntPtr handle, int val);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void PropertyGridChoices_Insert_(System.IntPtr handle, int index, ref Alternet.UI.NativeStringSpan text, int value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool PropertyGridChoices_IsOk_(System.IntPtr handle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void PropertyGridChoices_RemoveAt_(System.IntPtr handle, ulong nIndex, ulong count);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void PropertyGridChoices_Clear_(System.IntPtr handle);
            
        }
    }
}
